--- a/new.tex
+++ b/new.tex
@@ -680,7 +680,7 @@ recording devices, varied camera positioning, lighting conditions,
 camera angle, and video recording skills of the person. To produce
 aesthetically beautiful video, it is important to consider the quality
 of the videos.We are considering the following aspects to obtain
-video quality score:
+video quality score and a better quality:
 \begin{itemize}
 \item \textbf{Blockiness:} The blocking effect mainly comes due to poor
 quality of data compression. To measure blockiness, we take
@@ -802,8 +802,7 @@ decreases even though it is not selected. It is because during this
 time, its view is similar to Cam 1, resulting in large (near 1) value
 of v 12 (Equation 15). At Shot 9, a third (other than Cam 1 and Cam
 2) video gets selected until Cam 1's diversity increases enough so
-that it gets selected again. In summary, the metric $S^d$ is able to
-capture and spatial and temporal diversity of videos.
+that it gets selected again. 
 
 \subsection{Final Ranking}
 For all the videos of the selected class, we have three metrics:
@@ -883,8 +882,7 @@ check on occlusion and shakiness every second, and whenever the
 value goes above threshold (same as the one used in the filtering
 step), video selection is triggered. We added this optimization to
 take care of the situations where the view gets occluded after it is
-selection. While a lower video quality can still be acceptable, an
-occluded or shaky video annoys the viewers.
+selection. 
 
 \section{EVALUATION}
 The main goal of the experiments is to show that the proposed
@@ -960,10 +958,7 @@ of stage areas.
 
 For P2 and P3, the users preferred the MoViMash created mashup.
 For both the performances, user's found the shot transitions to be
-smooth and pleasing. We relate this response of the user's to our
-class-based learning for predicting the shot transitions. The users
-also remarked that MoViMash produced videos had less occlusions
-in comparison with VQ-Only based mashup.
+smooth and pleasing.
 
 While users liked MoViMash created mashups of P2 and P3,
 they preferred VQ-Only mashup for P1. By analyzing the recordings and user comments, we found that P1 differs from P2 and P3 in
