User1 Changes intro

--- a/new.tex
+++ b/new.tex
@@ -129,29 +129,29 @@
 %
 % 1st. author
 \alignauthor
-Mukesh Saini\\
+Sameer Arora\\
 \affaddr {Dept. of Computer Science} \\
-\affaddr {National University of Singapore}\\
+\affaddr {IIT Ropar}\\
 \email {mksaini@comp.nus.edu.sg}
 % 2nd. author
 \alignauthor
- Raghudeep Gadde\\
-		\affaddr{Dept. of ECE}\\       
-       \affaddr{National University of Singapore}\\
+ Shreyanshu Shekhar\\
+		\affaddr{Dept. of Computer Science}\\       
+       \affaddr{IIT Ropar}\\
          \email{elerdg@nus.edu.sg}
  \and      
 % 3rd. author
 \alignauthor 
-Shuicheng Yan \\
-       \affaddr{Dept. of ECE}\\
-       \affaddr{National University of Singapore }\\
+Akshat Rathore\\
+       \affaddr{Dept. of Computer Science}\\
+       \affaddr{IIT Ropar}\\
        \email{eleyans@nus.edu.sg}
 % use '\and' if you need 'another row' of author names
 % 4th. author
 \alignauthor 
- Wei Tsang Ooi \\ 
+ Sahil Kumar \\ 
         \affaddr{  Dept. of Computer Science}\\
-       \affaddr{ National University of Singapore }\\
+       \affaddr{IIT Ropar}\\
        \email{  ooiwt@comp.nus.edu.sg}
 }
 % There's nothing stopping you putting the seventh, eighth, etc.
@@ -190,6 +190,7 @@ MoViMash framework. \vspace{0.1cm} \\
 \end{abstract}
 
 \section{Introduction}
+I am sammerr tryin the git .The file is bieng edited by me.
 Worldwide shipment of camera phones were estimated to reach
 1.14 billion in the year 2011 alone \cite{1} . Furthermore, a survey of
 over 2,500 respondents by Photobucket reveals that 45$\%$ of the respondents use mobile devices to shoot video at least once weekly during the summer of 2011, validating the significant increase in
