--- a/new.tex
+++ b/new.tex
@@ -190,6 +190,7 @@ MoViMash framework. \vspace{0.1cm} \\
 \end{abstract}
 
 \section{Introduction}
+I am sameer user2 .I am editing the file.
 Worldwide shipment of camera phones were estimated to reach
 1.14 billion in the year 2011 alone \cite{1} . Furthermore, a survey of
 over 2,500 respondents by Photobucket reveals that 45$\%$ of the respondents use mobile devices to shoot video at least once weekly during the summer of 2011, validating the significant increase in
